Docker Version Complete

--- a/Website/production.ini
+++ b/Website/production.ini
@@ -11,10 +11,22 @@ pyramid.debug_authorization = false
 pyramid.debug_notfound = false
 pyramid.debug_routematch = false
 pyramid.default_locale_name = en
+pyramid.includes =
+    pyramid_storage
 
 sqlalchemy.url = sqlite:///%(here)s/koala.sqlite
 
 retry.attempts = 3
+
+auth.secret = S3kr3t
+
+#Storage stuff
+storage.base_path = %(here)s/koala/uploads/
+storage.base_url  = uploads/
+
+# By default, the toolbar only appears for clients from IP addresses
+# '127.0.0.1' and '::1'.
+# debugtoolbar.hosts = 127.0.0.1 ::1
 
 [pshell]
 setup = koala.pshell.setup
